Fixed word wraping issue in output.

--- a/css/index.css
+++ b/css/index.css
@@ -12,6 +12,7 @@ body {
   resize: vertical;
   white-space: pre-wrap;
   width: 100%;
+  word-break: keep-all;
   word-wrap: break-word;
 }
 
